<resources>
    <string name="app_name">TestAppBarrier</string>

    <!--Region network error-->
    <string name="network_error_default">Ошибка сервера</string>
    <string name="network_error_user_already_exists">Такой пользователь уже существует</string>
    <string name="network_error_unauthorized">Не возможно пройти авторизацию, попробуйте войти снова</string>

    <string name="network_error">Отсутсвует подключение к интернету</string>
    <string name="error_empty_fields">Заполните поля</string>



    <string name="splash_screen_message">Здесь обычно логотип компании =)</string>

    <string name="login_by_email_title">Введите электронную почту и пароль</string>
    <string name="login">Войти</string>
    <string name="login_title">Вход</string>

    <string name="hint_email">Эл. почта</string>
    <string name="hint_password">Пароль</string>
    <string name="hint_name">Имя</string>

    <string name="sign_up_title">Регистрация</string>
    <string name="sign_up_button">Зерегистрироваться</string>
    <string name="sign_up_success">Пользователь успешно создан!</string>

    <string name="sign_out">Выйти</string>


</resources>